--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,7 +2,7 @@ blank_issues_enabled: false
 contact_links:
   - name: SmashMC Website
     url: https://pokesmash.enjin.com/
-    about: 
+    about: The SmashMC website
   - name: SmashMC Discord
     url: https://discord.gg/smashmc
-    about:
+    about: The SmashMC Discord
